--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="YouTube Audio Downloader"
+        android:text="YouTube Downloader"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
@@ -22,13 +22,13 @@
         android:id="@+id/url_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="URL YouTube"
-        android:textColorHint="@color/hint_text_color"
+        android:text="https://www.youtube.com/watch?v=8ocWUGARCB0"
+        android:layout_marginHorizontal="20dp"
+        android:hint="Colle ici l'URL YouTube"
+        android:textColorHint="#888888"
         android:background="@drawable/edit_text_bg"
         android:textColor="#FFFFFF"
-        android:text="https://www.youtube.com/watch?v=8ocWUGARCB0"
         android:padding="16dp"
-        android:layout_marginHorizontal="10dp"
         android:layout_below="@id/title"
         android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true" />
